--- a/app/src/main/res/layout/activity_tip_detail.xml
+++ b/app/src/main/res/layout/activity_tip_detail.xml
@@ -29,14 +29,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="353dp"
         android:layout_height="480dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
         app:cardCornerRadius="13dp"
-        app:layout_constraintBottom_toTopOf="@+id/tipCheck_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,13 +58,13 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="73dp"
-            android:layout_height="71dp"
-            android:layout_marginLeft="140dp"
-            android:src="@drawable/normal_ic"
-            android:layout_marginBottom="10dp"
-            />
+            <ImageView
+                android:layout_width="73dp"
+                android:layout_height="71dp"
+                android:layout_marginLeft="140dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/normal_ic" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tip_RecyclerView"
                 android:layout_width="match_parent"
@@ -72,18 +74,19 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
     <Button
         android:id="@+id/tipCheck_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/start_button"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
         android:text="I got it!"
         android:textColor="#f08e76"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
