--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -4,72 +4,22 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
-    <FrameLayout
-        android:layout_weight="1"
-        android:padding="1dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/frameLayout2"
+    <TextView
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="21dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-      >
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textColor="#f08e76"
+        android:letterSpacing="-0.02"
+        android:lineSpacingExtra="10sp"
+        android:gravity="center_horizontal"
+        android:text="Health Calendar"
+        />
 
-        <ImageView
-            android:id="@+id/image_plusBtn"
-            android:layout_margin="10dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/dog_img" />
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="90dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:lineSpacingExtra="1sp"
-            android:text="NAME"
-            android:textColor="#bebebe"
-            android:textSize="11sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="130dp"
-            android:id="@+id/name_editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:lineSpacingExtra="6sp"
-            android:textColor="#f08e76"
-            android:textSize="15sp"
-            android:textStyle="normal"
-            android:text="John"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="90dp"
-            android:layout_marginTop="40dp"
-            android:fontFamily="sans-serif-medium"
-            android:lineSpacingExtra="1sp"
-            android:text="SEX"
-            android:textColor="#bebebe"
-            android:textSize="11sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="40dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="Male"
-            android:lineSpacingExtra="6sp"
-            android:textColor="#f08e76"
-            android:textSize="15sp"
-            android:textStyle="normal" />
-    </FrameLayout>
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
     android:layout_weight="9"
     android:layout_marginBottom="25dp"
