--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -63,9 +63,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_img_view_a"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:src="@drawable/profile_icon" />
 
         <ImageView
@@ -73,6 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="62dp"
             android:layout_marginTop="62dp"
+            android:id="@+id/add_profile_a"
             android:src="@drawable/add_icon" />
     </FrameLayout>
 
