--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -61,13 +61,15 @@
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/profile_icon" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+
+<!--        <ImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/profile_icon" />-->
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_img_view_e"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:src="@drawable/profile_icon" />
 
         <ImageView
@@ -75,6 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="62dp"
             android:layout_marginTop="62dp"
+            android:id="@+id/add_profile_e"
             android:src="@drawable/add_icon" />
     </FrameLayout>
 
