--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,12 +45,13 @@
             android:textSize="10sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="94dp"
-            android:layout_height="94dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_img_view_f"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_marginLeft="29dp"
             android:layout_marginTop="40dp"
-            android:src="@drawable/dog_img" />
+            android:src="@drawable/profile_icon" />
 
         <ImageView
             android:id="@+id/edit_btn"
